# model/model.go
@@ -1,18 +1,21 @@
-// Code generated by github.com/99designs/gqlgen, DO NOT EDIT.
-
 package model
 
-import (
-	item "github.com/kautsarady/adindopustaka/model/item"
-)
-
+// Book .
 type Book struct {
-	ID          int             `json:"id,omitempty"`
-	Title       string          `json:"title,omitempty"`
-	Authors     []item.Author   `json:"authors,omitempty"`
-	Categories  []item.Category `json:"categories,omitempty"`
-	ImageURL    string          `json:"image_url,omitempty"`
-	GramedURL   string          `json:"gramed_url,omitempty"`
-	Tags        []item.Tag      `json:"tags,omitempty"`
-	Description string          `json:"description,omitempty"`
+	ID          int    `json:"id,omitempty"`
+	Title       string `json:"title,omitempty"`
+	ImageURL    string `json:"image_url,omitempty"`
+	GramedURL   string `json:"gramed_url,omitempty"`
+	Description string `json:"description"`
+	Authors     []Item `json:"authors,omitempty"`
+	Categories  []Item `json:"categories,omitempty"`
+	Tags        []Item `json:"tags,omitempty"`
+}
+
+// Item .
+type Item struct {
+	ID     int    `json:"id,omitempty"`
+	BookID int    `json:"-"`
+	Name   string `json:"name,omitempty"`
+	Books  []Book `json:"books,omitempty"`
 }
